--- a/AngularJsAuthentication/Web.config
+++ b/AngularJsAuthentication/Web.config
@@ -16,6 +16,7 @@
   </appSettings>
   <connectionStrings>
     <add name="AuthContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AngularJSAuth.mdf;Initial Catalog=AngularJSAuth;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="Auth2Context" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AngularJSAuth2.mdf;Initial Catalog=AngularJSAuth2;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
