--- a/AngularJsAuthentication/AngularJsAuthentication.csproj
+++ b/AngularJsAuthentication/AngularJsAuthentication.csproj
@@ -186,11 +186,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Auth2Context.cs" />
     <Compile Include="Models\AuthContext.cs" />
     <Compile Include="Models\UserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\SimpleAuthorizationServerProvider.cs" />
+    <Compile Include="Repositories\Auth2Repository.cs" />
     <Compile Include="Repositories\AuthRepository.cs" />
+    <Compile Include="Services\UserStoreService.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
